# service/ClearTestData.js
@@ -1,0 +1,11 @@
+/**
+ * Clears Data from Automation Testing.
+ *
+ * returns ClearTestData confirmation
+ **/
+exports.clearTestData = function () {
+  return new Promise(function (resolve, reject) {
+    // Clearing tests
+    resolve(true)
+  })
+}
